[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rh-gitleaks"
version = "2.0.0-dev"
description = "A wrapper around gitleaks to integrate with Red Hat patterns"
authors = [{ name="Red Hat InfoSec", email="infosec@redhat.com" }]
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["PyJWT", "requests"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.corp.redhat.com/infosec-public/developer-workbench/tools/-/tree/main/rh-gitleaks"
"Bug Tracker" = "https://gitlab.corp.redhat.com/infosec-public/developer-workbench/tools/-/issues"

[project.scripts]
rh-gitleaks = "rh_gitleaks.__main__:main"
rh-gitleaks-gh-account = "rh_gitleaks.gh_account.__main__:main"
