[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rh_pre_commit"
version = "0.0.1"
description = "Tools for managing pre-commit hooks within Red Hat"
authors = [{ name="Red Hat InfoSec", email="infosec@redhat.com" }]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'pre-commit >= 2',
]

[project.urls]
"Homepage" = "https://gitlab.corp.redhat.com/infosec-public/developer-workbench/tools/-/tree/main/rh-pre-commit"
"Bug Tracker" = "https://gitlab.corp.redhat.com/infosec-public/developer-workbench/tools/-/issues"

[project.scripts]
rh-multi-pre-commit = "rh_pre_commit.multi:main"
