[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rh-pre-commit"
# When changing this make sure that "../scripts/tool-version rh-pre-commit"
# reports the correct value
version = "2.0.0.dev0"
description = "Tools for managing pre-commit hooks within Red Hat"
authors = [{ name="Red Hat InfoSec", email="infosec@redhat.com" }]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'pre-commit >= 2',
  'rh-gitleaks',
]

[project.urls]
"Homepage" = "https://gitlab.corp.redhat.com/infosec-public/developer-workbench/tools/-/tree/main/rh-pre-commit"
"Bug Tracker" = "https://gitlab.corp.redhat.com/infosec-public/developer-workbench/tools/-/issues"

[project.scripts]
# The pre-commit manager
rh-multi-pre-commit = "rh_pre_commit.multi.__main__:main"
# The pre-commit impl
rh-pre-commit = "rh_pre_commit.__main__:main"
